// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`settings/Editor initially no warning 1`] = `
<div>
  <div
    class="subtitle"
  >
    Editor
  </div>
  <div>
    mock-select-control id:
    set-default-units
    label:
    Default Units
    url:
    options:
    [{"label":"mm","value":"mm"},{"label":"Inches","value":"inches"}]
    <input
      class="select-control"
      id="set-default-units"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-font-family
    label:
    Default Font
    url:
    options:
    [{"label":"Arial","value":"Arial"},{"label":"Courier","value":"Courier"},{"label":"蘋果儷細宋","value":"Apple LiSung"}]
    <input
      class="select-control"
      id="set-default-font-family"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-font-style
    label:
    Default Font Style
    url:
    options:
    [{"label":"Regular","value":"ArialMT"},{"label":"Bold","value":"Arial-BoldMT"},{"label":"Bold Italic","value":"Arial-BoldItalicMT"},{"label":"Italic","value":"Arial-ItalicMT"}]
    <input
      class="select-control"
      id="set-default-font-style"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-model
    label:
    Default Document Setting
    url:
    options:
    [{"label":"beamo","value":"fbm1"},{"label":"beamo II","value":"fbm2"},{"label":"Beambox","value":"fbb1b"},{"label":"Beambox Pro","value":"fbb1p"},{"label":"HEXA","value":"fhexa1"},{"label":"HEXA RF","value":"fhx2rf"},{"label":"Ador","value":"ado1"},{"label":"Promark","value":"fpm1"},{"label":"Lazervida","value":"flv1"},{"label":"Beambox II","value":"fbb2"}]
    <input
      class="select-control"
      id="set-default-model"
    />
  </div>
  <div>
    mock-select-control id:
    set-guide
    label:
    Guides
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-guide"
    />
  </div>
  <div>
    mock-form-item id:
    set-guide-axis
    label:
    Guides Origin
    url:
    options:
    <span
      class="font2 sub-item"
    >
      X
    </span>
    <div>
      UnitInput: 
      set-guide-axis-x
      <p>
        precision: 
        2
      </p>
      <p>
        unit: 
        mm
      </p>
      <input
        id="set-guide-axis-x"
        max="400"
        min="0"
        value="0"
      />
    </div>
    <span
      class="font2 sub-item"
    >
      Y
    </span>
    <div>
      UnitInput: 
      set-guide-axis-y
      <p>
        precision: 
        2
      </p>
      <p>
        unit: 
        mm
      </p>
      <input
        id="set-guide-axis-y"
        max="375"
        min="0"
        value="0"
      />
    </div>
  </div>
  <div>
    mock-select-control id:
    set-bitmap-quality
    label:
    Bitmap Preview Quality
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004494995
    options:
    [{"label":"Low","value":true},{"label":"Normal","value":false}]
    <input
      class="select-control"
      id="set-bitmap-quality"
    />
  </div>
  <div>
    mock-select-control id:
    set-anti-aliasing
    label:
    Anti-Aliasing
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004408956
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-anti-aliasing"
    />
  </div>
  <div>
    mock-select-control id:
    set-continuous-drawing
    label:
    Continuous Drawing
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004406496
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-continuous-drawing"
    />
  </div>
  <div>
    mock-select-control id:
    set-simplify-clipper-path
    label:
    Optimize the Calculated Path
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004407276
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-simplify-clipper-path"
    />
  </div>
  <div>
    mock-select-control id:
    auto-switch-tab
    label:
    Auto Switch Layer and Object Panel
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="auto-switch-tab"
    />
  </div>
  <div>
    mock-select-control id:
    path-engine
    label:
    Path Calculation Acceleration (Beta)
    url:
    https://support.flux3dp.com/hc/en-us/articles/11146997425039
    options:
    [{"label":"On","value":"swiftray"},{"label":"Off","value":"fluxghost"}]
    <input
      class="select-control"
      id="path-engine"
    />
  </div>
  <div>
    mock-select-control id:
    set-enable-custom-backlash
    label:
    Enable Custom Backlash Compensation
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-enable-custom-backlash"
    />
  </div>
  <div>
    mock-select-control id:
    set-enable-uv-print-file
    label:
    Enable UV Print File
    url:
    https://support.flux3dp.com/hc/en-us/articles/12320887477135
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-enable-uv-print-file"
    />
  </div>
  <div>
    mock-select-control id:
    print-advanced-mode
    label:
    Printer Advanced Mode
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="print-advanced-mode"
    />
  </div>
  <div>
    mock-select-control id:
    use-real-boundary
    label:
    Use Maximum Range
    url:
    tooltip:Expand to the actual maximum work area, unrestricted by integer grid lines.
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="use-real-boundary"
    />
  </div>
  <div>
    mock-select-control id:
    crop-task-thumbnail
    label:
    Content Crop Thumbnail
    url:
    tooltip:Display only the thumbnail of the area containing content, excluding blank canvas areas.
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="crop-task-thumbnail"
    />
  </div>
</div>
`;

exports[`settings/Editor initially no warning 2`] = `
<div>
  <div
    class="subtitle"
  >
    Editor
  </div>
  <div>
    mock-select-control id:
    set-default-units
    label:
    Default Units
    url:
    options:
    [{"label":"mm","value":"mm"},{"label":"Inches","value":"inches"}]
    <input
      class="select-control"
      id="set-default-units"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-font-family
    label:
    Default Font
    url:
    options:
    [{"label":"Arial","value":"Arial"},{"label":"Courier","value":"Courier"},{"label":"蘋果儷細宋","value":"Apple LiSung"}]
    <input
      class="select-control"
      id="set-default-font-family"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-font-style
    label:
    Default Font Style
    url:
    options:
    [{"label":"Light","value":"LiSungLight"}]
    <input
      class="select-control"
      id="set-default-font-style"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-model
    label:
    Default Document Setting
    url:
    options:
    [{"label":"beamo","value":"fbm1"},{"label":"beamo II","value":"fbm2"},{"label":"Beambox","value":"fbb1b"},{"label":"Beambox Pro","value":"fbb1p"},{"label":"HEXA","value":"fhexa1"},{"label":"HEXA RF","value":"fhx2rf"},{"label":"Ador","value":"ado1"},{"label":"Promark","value":"fpm1"},{"label":"Lazervida","value":"flv1"},{"label":"Beambox II","value":"fbb2"}]
    <input
      class="select-control"
      id="set-default-model"
    />
  </div>
  <div>
    mock-select-control id:
    set-guide
    label:
    Guides
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-guide"
    />
  </div>
  <div>
    mock-form-item id:
    set-guide-axis
    label:
    Guides Origin
    url:
    options:
    <span
      class="font2 sub-item"
    >
      X
    </span>
    <div>
      UnitInput: 
      set-guide-axis-x
      <p>
        precision: 
        2
      </p>
      <p>
        unit: 
        mm
      </p>
      <input
        id="set-guide-axis-x"
        max="400"
        min="0"
        value="0"
      />
    </div>
    <span
      class="font2 sub-item"
    >
      Y
    </span>
    <div>
      UnitInput: 
      set-guide-axis-y
      <p>
        precision: 
        2
      </p>
      <p>
        unit: 
        mm
      </p>
      <input
        id="set-guide-axis-y"
        max="375"
        min="0"
        value="0"
      />
    </div>
  </div>
  <div>
    mock-select-control id:
    set-bitmap-quality
    label:
    Bitmap Preview Quality
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004494995
    options:
    [{"label":"Low","value":true},{"label":"Normal","value":false}]
    <input
      class="select-control"
      id="set-bitmap-quality"
    />
  </div>
  <div>
    mock-select-control id:
    set-anti-aliasing
    label:
    Anti-Aliasing
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004408956
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-anti-aliasing"
    />
  </div>
  <div>
    mock-select-control id:
    set-continuous-drawing
    label:
    Continuous Drawing
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004406496
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-continuous-drawing"
    />
  </div>
  <div>
    mock-select-control id:
    set-simplify-clipper-path
    label:
    Optimize the Calculated Path
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004407276
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-simplify-clipper-path"
    />
  </div>
  <div>
    mock-select-control id:
    auto-switch-tab
    label:
    Auto Switch Layer and Object Panel
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="auto-switch-tab"
    />
  </div>
  <div>
    mock-select-control id:
    path-engine
    label:
    Path Calculation Acceleration (Beta)
    url:
    https://support.flux3dp.com/hc/en-us/articles/11146997425039
    options:
    [{"label":"On","value":"swiftray"},{"label":"Off","value":"fluxghost"}]
    <input
      class="select-control"
      id="path-engine"
    />
  </div>
  <div>
    mock-select-control id:
    set-enable-custom-backlash
    label:
    Enable Custom Backlash Compensation
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-enable-custom-backlash"
    />
  </div>
  <div>
    mock-select-control id:
    set-enable-uv-print-file
    label:
    Enable UV Print File
    url:
    https://support.flux3dp.com/hc/en-us/articles/12320887477135
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-enable-uv-print-file"
    />
  </div>
  <div>
    mock-select-control id:
    print-advanced-mode
    label:
    Printer Advanced Mode
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="print-advanced-mode"
    />
  </div>
  <div>
    mock-select-control id:
    use-real-boundary
    label:
    Use Maximum Range
    url:
    tooltip:Expand to the actual maximum work area, unrestricted by integer grid lines.
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="use-real-boundary"
    />
  </div>
  <div>
    mock-select-control id:
    crop-task-thumbnail
    label:
    Content Crop Thumbnail
    url:
    tooltip:Display only the thumbnail of the area containing content, excluding blank canvas areas.
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="crop-task-thumbnail"
    />
  </div>
</div>
`;

exports[`settings/Editor initially no warning 3`] = `
<div>
  <div
    class="subtitle"
  >
    Editor
  </div>
  <div>
    mock-select-control id:
    set-default-units
    label:
    Default Units
    url:
    options:
    [{"label":"mm","value":"mm"},{"label":"Inches","value":"inches"}]
    <input
      class="select-control"
      id="set-default-units"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-font-family
    label:
    Default Font
    url:
    options:
    [{"label":"Arial","value":"Arial"},{"label":"Courier","value":"Courier"},{"label":"蘋果儷細宋","value":"Apple LiSung"}]
    <input
      class="select-control"
      id="set-default-font-family"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-font-style
    label:
    Default Font Style
    url:
    options:
    [{"label":"Regular","value":"Regular"},{"label":"Bold","value":"Courier-Bold"},{"label":"Bold Oblique","value":"Courier-BoldOblique"},{"label":"Oblique","value":"Courier-Oblique"}]
    <input
      class="select-control"
      id="set-default-font-style"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-model
    label:
    Default Document Setting
    url:
    options:
    [{"label":"beamo","value":"fbm1"},{"label":"beamo II","value":"fbm2"},{"label":"Beambox","value":"fbb1b"},{"label":"Beambox Pro","value":"fbb1p"},{"label":"HEXA","value":"fhexa1"},{"label":"HEXA RF","value":"fhx2rf"},{"label":"Ador","value":"ado1"},{"label":"Promark","value":"fpm1"},{"label":"Lazervida","value":"flv1"},{"label":"Beambox II","value":"fbb2"}]
    <input
      class="select-control"
      id="set-default-model"
    />
  </div>
  <div>
    mock-select-control id:
    set-guide
    label:
    Guides
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-guide"
    />
  </div>
  <div>
    mock-form-item id:
    set-guide-axis
    label:
    Guides Origin
    url:
    options:
    <span
      class="font2 sub-item"
    >
      X
    </span>
    <div>
      UnitInput: 
      set-guide-axis-x
      <p>
        precision: 
        2
      </p>
      <p>
        unit: 
        mm
      </p>
      <input
        id="set-guide-axis-x"
        max="400"
        min="0"
        value="0"
      />
    </div>
    <span
      class="font2 sub-item"
    >
      Y
    </span>
    <div>
      UnitInput: 
      set-guide-axis-y
      <p>
        precision: 
        2
      </p>
      <p>
        unit: 
        mm
      </p>
      <input
        id="set-guide-axis-y"
        max="375"
        min="0"
        value="0"
      />
    </div>
  </div>
  <div>
    mock-select-control id:
    set-bitmap-quality
    label:
    Bitmap Preview Quality
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004494995
    options:
    [{"label":"Low","value":true},{"label":"Normal","value":false}]
    <input
      class="select-control"
      id="set-bitmap-quality"
    />
  </div>
  <div>
    mock-select-control id:
    set-anti-aliasing
    label:
    Anti-Aliasing
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004408956
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-anti-aliasing"
    />
  </div>
  <div>
    mock-select-control id:
    set-continuous-drawing
    label:
    Continuous Drawing
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004406496
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-continuous-drawing"
    />
  </div>
  <div>
    mock-select-control id:
    set-simplify-clipper-path
    label:
    Optimize the Calculated Path
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004407276
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-simplify-clipper-path"
    />
  </div>
  <div>
    mock-select-control id:
    auto-switch-tab
    label:
    Auto Switch Layer and Object Panel
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="auto-switch-tab"
    />
  </div>
  <div>
    mock-select-control id:
    path-engine
    label:
    Path Calculation Acceleration (Beta)
    url:
    https://support.flux3dp.com/hc/en-us/articles/11146997425039
    options:
    [{"label":"On","value":"swiftray"},{"label":"Off","value":"fluxghost"}]
    <input
      class="select-control"
      id="path-engine"
    />
  </div>
  <div>
    mock-select-control id:
    set-enable-custom-backlash
    label:
    Enable Custom Backlash Compensation
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-enable-custom-backlash"
    />
  </div>
  <div>
    mock-select-control id:
    set-enable-uv-print-file
    label:
    Enable UV Print File
    url:
    https://support.flux3dp.com/hc/en-us/articles/12320887477135
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-enable-uv-print-file"
    />
  </div>
  <div>
    mock-select-control id:
    print-advanced-mode
    label:
    Printer Advanced Mode
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="print-advanced-mode"
    />
  </div>
  <div>
    mock-select-control id:
    use-real-boundary
    label:
    Use Maximum Range
    url:
    tooltip:Expand to the actual maximum work area, unrestricted by integer grid lines.
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="use-real-boundary"
    />
  </div>
  <div>
    mock-select-control id:
    crop-task-thumbnail
    label:
    Content Crop Thumbnail
    url:
    tooltip:Display only the thumbnail of the area containing content, excluding blank canvas areas.
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="crop-task-thumbnail"
    />
  </div>
</div>
`;

exports[`settings/Editor initially no warning 4`] = `
<div>
  <div
    class="subtitle"
  >
    Editor
  </div>
  <div>
    mock-select-control id:
    set-default-units
    label:
    Default Units
    url:
    options:
    [{"label":"mm","value":"mm"},{"label":"Inches","value":"inches"}]
    <input
      class="select-control"
      id="set-default-units"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-font-family
    label:
    Default Font
    url:
    options:
    [{"label":"Arial","value":"Arial"},{"label":"Courier","value":"Courier"},{"label":"蘋果儷細宋","value":"Apple LiSung"}]
    <input
      class="select-control"
      id="set-default-font-family"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-font-style
    label:
    Default Font Style
    url:
    options:
    [{"label":"Regular","value":"Regular"},{"label":"Bold","value":"Courier-Bold"},{"label":"Bold Oblique","value":"Courier-BoldOblique"},{"label":"Oblique","value":"Courier-Oblique"}]
    <input
      class="select-control"
      id="set-default-font-style"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-model
    label:
    Default Document Setting
    url:
    options:
    [{"label":"beamo","value":"fbm1"},{"label":"beamo II","value":"fbm2"},{"label":"Beambox","value":"fbb1b"},{"label":"Beambox Pro","value":"fbb1p"},{"label":"HEXA","value":"fhexa1"},{"label":"HEXA RF","value":"fhx2rf"},{"label":"Ador","value":"ado1"},{"label":"Promark","value":"fpm1"},{"label":"Lazervida","value":"flv1"},{"label":"Beambox II","value":"fbb2"}]
    <input
      class="select-control"
      id="set-default-model"
    />
  </div>
  <div>
    mock-select-control id:
    set-guide
    label:
    Guides
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-guide"
    />
  </div>
  <div>
    mock-form-item id:
    set-guide-axis
    label:
    Guides Origin
    url:
    options:
    <span
      class="font2 sub-item"
    >
      X
    </span>
    <div>
      UnitInput: 
      set-guide-axis-x
      <p>
        precision: 
        2
      </p>
      <p>
        unit: 
        mm
      </p>
      <input
        id="set-guide-axis-x"
        max="400"
        min="0"
        value="0"
      />
    </div>
    <span
      class="font2 sub-item"
    >
      Y
    </span>
    <div>
      UnitInput: 
      set-guide-axis-y
      <p>
        precision: 
        2
      </p>
      <p>
        unit: 
        mm
      </p>
      <input
        id="set-guide-axis-y"
        max="375"
        min="0"
        value="0"
      />
    </div>
  </div>
  <div>
    mock-select-control id:
    set-bitmap-quality
    label:
    Bitmap Preview Quality
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004494995
    options:
    [{"label":"Low","value":true},{"label":"Normal","value":false}]
    <input
      class="select-control"
      id="set-bitmap-quality"
    />
  </div>
  <div>
    mock-select-control id:
    set-anti-aliasing
    label:
    Anti-Aliasing
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004408956
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-anti-aliasing"
    />
  </div>
  <div>
    mock-select-control id:
    set-continuous-drawing
    label:
    Continuous Drawing
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004406496
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-continuous-drawing"
    />
  </div>
  <div>
    mock-select-control id:
    set-simplify-clipper-path
    label:
    Optimize the Calculated Path
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004407276
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-simplify-clipper-path"
    />
  </div>
  <div>
    mock-select-control id:
    auto-switch-tab
    label:
    Auto Switch Layer and Object Panel
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="auto-switch-tab"
    />
  </div>
  <div>
    mock-select-control id:
    path-engine
    label:
    Path Calculation Acceleration (Beta)
    url:
    https://support.flux3dp.com/hc/en-us/articles/11146997425039
    options:
    [{"label":"On","value":"swiftray"},{"label":"Off","value":"fluxghost"}]
    <input
      class="select-control"
      id="path-engine"
    />
  </div>
  <div>
    mock-select-control id:
    set-enable-custom-backlash
    label:
    Enable Custom Backlash Compensation
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-enable-custom-backlash"
    />
  </div>
  <div>
    mock-select-control id:
    set-enable-uv-print-file
    label:
    Enable UV Print File
    url:
    https://support.flux3dp.com/hc/en-us/articles/12320887477135
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-enable-uv-print-file"
    />
  </div>
  <div>
    mock-select-control id:
    print-advanced-mode
    label:
    Printer Advanced Mode
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="print-advanced-mode"
    />
  </div>
  <div>
    mock-select-control id:
    use-real-boundary
    label:
    Use Maximum Range
    url:
    tooltip:Expand to the actual maximum work area, unrestricted by integer grid lines.
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="use-real-boundary"
    />
  </div>
  <div>
    mock-select-control id:
    crop-task-thumbnail
    label:
    Content Crop Thumbnail
    url:
    tooltip:Display only the thumbnail of the area containing content, excluding blank canvas areas.
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="crop-task-thumbnail"
    />
  </div>
</div>
`;
